Change API_URL to new Web App URL
Updated API_URL to new Google Apps Script Web App URL.

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
     // ==================== ⭐ 設定區（唯一需要修改的地方）====================
     
     // TODO: 請將下方的網址改為您的 Apps Script Web App URL
-    const API_URL = 'https://script.google.com/macros/s/AKfycbxKnac9pU8resOeHywd0Lmi25g-axQ6Nr5ieI31b0huL1ZLCpPjKae3km1s4R2sn6Jb/exec'
+    const API_URL = 'https://script.google.com/macros/s/AKfycbytitQ0fKDy03O8nNj3lHyffR43tHptOLtK4vnAwqH0gMnyy8RNEy8kjHsmtV0vKkq9/exec';
     // 格式範例: 'https://script.google.com/macros/s/AKfycbxxx.../exec'
     
     // ========================================================================
